fixed screen flicker using media query with JS code (yuk)

--- a/_sass/_sidemenu.scss
+++ b/_sass/_sidemenu.scss
@@ -28,10 +28,6 @@
 
 .sidebar {
       width: 230px;
-
-    @media screen and (min-width: $on-desktop) {
-        width: 20%;
-    }
 }
 .sidebar.sidebar-left{
       left:0px;
